--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
-	"name": "PasswordSafeUI",
-	"version": "0.0.1",
-	"dependencies": {
-		"angular": "1.0.6",
-		"angular-resource": "1.0.6",
-		"angular-scenario": "1.0.6",
-		"angular-mocks": "1.0.6",
-		"less.js": "v1.3.3",
-		"bootstrap": "2.3.1",
-		"angular-ui-utils": "v0.0.1" 
-	}
+  "name": "PasswordSafeUI",
+  "version": "0.0.1",
+  "dependencies": {
+    "angular": "1.0.6",
+    "angular-resource": "1.0.6",
+    "angular-scenario": "1.0.6",
+    "angular-mocks": "1.0.6",
+    "less.js": "v1.3.3",
+    "bootstrap": "http://twitter.github.com/bootstrap/assets/bootstrap.zip",
+    "angular-ui-utils": "v0.0.1"
+  }
 }
