--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,6 @@
     "angular-mocks": "1.0.6",
     "less.js": "v1.3.3",
     "bootstrap": "http://twitter.github.com/bootstrap/assets/bootstrap.zip",
-    "angular-ui-utils": "v0.0.1",
-    "angular-ui-bootstrap": "~0.3.0"
+    "angular-ui-utils": "v0.0.1"
   }
 }
