--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "angular-resource": "1.0.6",
     "angular-scenario": "1.0.6",
     "angular-mocks": "1.0.6",
-    "less.js": "v1.3.3",
     "bootstrap": "http://twitter.github.com/bootstrap/assets/bootstrap.zip",
-    "angular-ui-utils": "v0.0.1"
+    "angular-ui-utils": "v0.0.1",
+    "underscore": "~1.4.4"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-less": "~0.5.1",
+    "grunt-contrib-watch": "~0.4.0"
   }
 }
