--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "angular-mocks": "1.0.6",
     "bootstrap": "http://twitter.github.com/bootstrap/assets/bootstrap.zip",
     "angular-ui-utils": "v0.0.1",
-    "underscore": "~1.4.4"
+    "underscore": "~1.4.4",
+    "angular-dragon-drop": "~0.0.1"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
