--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "grunt": "~0.4.1",
     "grunt-contrib-less": "~0.5.1",
     "grunt-contrib-watch": "~0.4.0",
-    "grunt-contrib-uglify": "~0.2.1"
+    "grunt-contrib-uglify": "~0.2.1",
+    "grunt-bower": "~0.5.1",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
