--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-ui-utils": "v0.0.1",
     "underscore": "~1.4.4",
     "angular-dragon-drop": "~0.0.1",
+    "jquery": "~1.9.1",
     "jquery-knob": "~1.2.2"
   },
   "ignore": [
