--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "grunt-contrib-less": "~0.5.1",
     "grunt-contrib-watch": "~0.4.3",
     "grunt-contrib-uglify": "~0.2.1",
-    "grunt-bower": "~0.5.1",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-clean": "~0.4.1"
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-bower-task": "~0.2.3"
   }
 }
