--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-uglify": "~0.2.1",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-clean": "~0.4.1",
-    "grunt-bower-task": "~0.2.3"
+    "grunt-bower-task": "~0.2.3",
+    "grunt-contrib-compress": "~0.5.1"
   }
 }
