--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-clean": "~0.4.1",
     "grunt-bower-task": "~0.2.3",
-    "grunt-contrib-compress": "~0.5.1"
+    "grunt-contrib-compress": "~0.5.1",
+    "grunt-env": "~0.4.0",
+    "grunt-preprocess": "~2.3.0"
   }
 }
