--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-bower-task": "~0.2.3",
     "grunt-contrib-compress": "~0.5.1",
     "grunt-env": "~0.4.0",
-    "grunt-preprocess": "~2.3.0"
+    "grunt-preprocess": "~2.3.0",
+    "grunt-angular-templates": "~0.3.8"
   }
 }
